bio-seq-derive/tests/fail/bad_sequence.rs
use bio_seq::prelude::*;

fn main() {
    let _seq = iupac!("ACGTx");
    let _seq = dna!("asdf");
}
